# RTR2014-15

./: CMakeLists.txt  README.md
doc/Submission 0/: Demo.md
doc/Submission 1/: readme.txt
doc/Submission 2/: make.bat  readme.txt
doc/Submission 2/etc/gangnamstyle/: formatConversionReadme.txt  hellknight.dae  hellknight.skel  hellknight_draft.mtl  hellknight_final.dae  hellknight_gangnam_style.json  imp_gangnam_style_animation.json
doc/Submission 2/etc/shaders/: cubemap.fs  deferred_geometry_pass_animated.fs  deferred_geometry_pass_animated.vs  lambert.fs  phong_tess.fs  postprocess_bloom.fs  postprocess_bloom_x_blur.fs  postprocess_bloom_y_blur.fs  shadowpass.vs  shadowpass_animated.vs
etc/: config.ini
etc/crytek_sponza/: sponza.mtl
etc/gangnamstyle/: hellknight.ply  hellknight_draft.dae  hellknight_gangnam_style_animation.json  hellknight_gangnamstyle.anim  imp_gangnam_style.json  main.d  wasteland.json
etc/shaders/: cubemap.vs  deferred_geometry_pass.fs  deferred_geometry_pass.vs  deferred_passtrough.fs  deferred_passtrough.vs  passthrough.vs  phong_tess.tctrl  postprocess_bloom_highpass.fs  postprocess_ssao.fs  shadowpass.fs
inc/: CandyApplication.h  Datatypes.h  DeferredPipeline.h  Effect.h  Geometry.h  GeometryBuffer.h  Material.h  Mesh.h  MeshLoader.h  PrimitiveBuffer.h  PrimitiveGenerator.h  RenderDevice.h  VertexFormat.h
inc/GL/: GLBuffer.h  GLCubeMap.h  GLProgram.h  GLTexture.h  PrimitiveMode.h
inc/Scene/: BoundingBox.h  Camera.h  Pointlight.h  SceneObject.h  SceneShape.h
src/: CandyApplication.cpp  DeferredPipeline.cpp  Effect.cpp  GeometryBuffer.cpp  Material.cpp  MeshLoader.cpp  PrimitiveGenerator.cpp  RenderDevice.cpp  VertexFormat.cpp  test.cpp  test.cpp.orig  utils.h
src/GL/: GLCubeMap.cpp  GLProgram.cpp  GLShader.cpp  GLTexture.cpp
src/Scene/: BoundingBox.cpp  Camera.cpp  Pointlight.cpp  Pointlight.cpp.orig  SceneObject.cpp  SceneShape.cpp
